--- a/Control_Systems_Solver/package.json
+++ b/Control_Systems_Solver/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "mathjs": "^12.4.1",
     "nerdamer": "^1.1.13",
+    "pythonia": "^1.1.3",
     "rxjs": "^6.5.5",
     "uuid": "^8.0.0",
     "viz.js": "^2.1.2",
